--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "iobserver",
-  "version": "0.0.1",
-  "description": "iobserver",
+  "version": "0.0.2",
+  "description": "iobserver - functinal observer pattern",
   "main": "index.js",
-  "bin": {
-    "iobserver": "bin/iobserver.js"
-  },
   "directories": {
     "test": "test"
   },
