--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "webpack && webpack --optimize-minimize --output-filename iobserver.min.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,10 @@
   },
   "homepage": "https://github.com/slavahatnuke/iobserver#readme",
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "mocha": "^3.2.0",
+    "webpack": "^2.4.1"
   }
 }
